// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-collapsible wp-components-panel css-k6yva8"
  data-g2-c16t="true"
  data-g2-component="Panel"
>
  <div
    aria-controls="panel"
    aria-expanded="false"
    class="wp-components-flex wp-components-collapsible-trigger wp-components-panel-header css-2p6qpx"
    data-g2-c16t="true"
    data-g2-component="PanelHeader"
    role="button"
    tabindex="0"
  >
    <span
      class="wp-components-text css-1jk3501"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-arrow-indicator css-ei3g6o"
        data-g2-c16t="true"
        data-g2-component="ArrowIndicator"
      >
        <div
          class="css-j1yu9m"
        >
          <div
            class="wp-components-icon css-feyyos"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="currentColor"
              height="5"
              size="5"
              viewBox="0 0 24 24"
              width="5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12l-18 12v-24z"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
    <div
      class="wp-components-flex-item wp-components-flex-block css-1j3zl9k"
      data-g2-c16t="true"
      data-g2-component="FlexBlock"
    >
      <span
        class="wp-components-text css-1xgp14x"
        data-g2-c16t="true"
        data-g2-component="Text"
      >
        Olaf
      </span>
    </div>
  </div>
  <div
    class="wp-components-collapsible-content wp-components-panel-body css-li0a7z"
    data-g2-c16t="true"
    data-g2-component="PanelBody"
    hidden=""
    id="panel"
    style="display: none;"
  >
    <div
      class="wp-components-animated css-1qs21wj"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="display: none; height: 0px; opacity: 0;"
    >
      <div
        class="css-1op8pye"
      >
        Some people are worth melting for.
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render seamless 1`] = `
<div
  class="wp-components-collapsible wp-components-panel css-k6yva8"
  data-g2-c16t="true"
  data-g2-component="Panel"
  seamless=""
>
  <div
    aria-controls="panel"
    aria-expanded="false"
    class="wp-components-flex wp-components-collapsible-trigger wp-components-panel-header css-2p6qpx"
    data-g2-c16t="true"
    data-g2-component="PanelHeader"
    role="button"
    tabindex="0"
  >
    <span
      class="wp-components-text css-1jk3501"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-arrow-indicator css-ei3g6o"
        data-g2-c16t="true"
        data-g2-component="ArrowIndicator"
      >
        <div
          class="css-j1yu9m"
        >
          <div
            class="wp-components-icon css-feyyos"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="currentColor"
              height="5"
              size="5"
              viewBox="0 0 24 24"
              width="5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12l-18 12v-24z"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
    <div
      class="wp-components-flex-item wp-components-flex-block css-1j3zl9k"
      data-g2-c16t="true"
      data-g2-component="FlexBlock"
    >
      <span
        class="wp-components-text css-1xgp14x"
        data-g2-c16t="true"
        data-g2-component="Text"
      >
        Olaf
      </span>
    </div>
  </div>
  <div
    class="wp-components-collapsible-content wp-components-panel-body css-li0a7z"
    data-g2-c16t="true"
    data-g2-component="PanelBody"
    hidden=""
    id="panel"
    style="display: none;"
  >
    <div
      class="wp-components-animated css-1qs21wj"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="display: none; height: 0px; opacity: 0;"
    >
      <div
        class="css-1op8pye"
      >
        Some people are worth melting for.
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render visible 1`] = `
<div
  class="wp-components-collapsible wp-components-panel css-k6yva8"
  data-g2-c16t="true"
  data-g2-component="Panel"
>
  <div
    aria-controls="panel"
    aria-expanded="true"
    class="wp-components-flex wp-components-collapsible-trigger wp-components-panel-header css-2p6qpx"
    data-g2-c16t="true"
    data-g2-component="PanelHeader"
    role="button"
    tabindex="0"
  >
    <span
      class="wp-components-text css-1jk3501"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-arrow-indicator css-nvpsar"
        data-g2-c16t="true"
        data-g2-component="ArrowIndicator"
      >
        <div
          class="css-j1yu9m"
        >
          <div
            class="wp-components-icon css-feyyos"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="currentColor"
              height="5"
              size="5"
              viewBox="0 0 24 24"
              width="5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12l-18 12v-24z"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
    <div
      class="wp-components-flex-item wp-components-flex-block css-1j3zl9k"
      data-g2-c16t="true"
      data-g2-component="FlexBlock"
    >
      <span
        class="wp-components-text css-1xgp14x"
        data-g2-c16t="true"
        data-g2-component="Text"
      >
        Olaf
      </span>
    </div>
  </div>
  <div
    class="wp-components-collapsible-content wp-components-panel-body css-li0a7z"
    data-g2-c16t="true"
    data-g2-component="PanelBody"
    id="panel"
  >
    <div
      class="wp-components-animated css-1qs21wj"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="display: block; height: auto; opacity: 1;"
    >
      <div
        class="css-1op8pye"
      >
        Some people are worth melting for.
      </div>
    </div>
  </div>
</div>
`;
